<resources>
    <string name="app_name">WorkTime</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="company_name">Företags Namn</string>
    <string name="company_orgnum">Orginations nummer</string>
    <string name="company_address">Företags Adress</string>
    <string name="company_salary">Timlön</string>
    <string name="company_overtime">Övertid</string>

</resources>
