<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:Context=".WorkplaceAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/workplaceAddToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <EditText
        android:id="@+id/wpCompanyNameAddET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/workplaceAddToolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/company_name" />

    <EditText
        android:id="@+id/wpCompanyOrgNumAddET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wpCompanyNameAddET"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/company_orgnum" />

    <EditText
        android:id="@+id/wpCompanyAddressAddET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wpCompanyOrgNumAddET"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/company_address" />

    <EditText
        android:id="@+id/wpCompanySalaryAddET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wpCompanyAddressAddET"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/company_salary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wpOvertimeHourSalaryAddRV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/wpCompanySalaryAddET"
        android:layout_marginLeft="10dp"
        tools:listitem="@layout/overtime_list_item"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="100">

        <Button
            android:id="@+id/cancelWorkplaceAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="50"
            android:background="#707070"
            android:text="Cancel" />

        <Button
            android:id="@+id/saveWorkplaceAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="50"
            android:background="#0F61FD"
            android:text="Save" />
    </LinearLayout>

</RelativeLayout>